--- a/ckb-sync-mainnet/ansible/playbook.yml
+++ b/ckb-sync-mainnet/ansible/playbook.yml
@@ -26,7 +26,7 @@
           wait_for:
             path: "{{ ckb_data_dir }}/logs/run.log"
             search_regex: "(?P<line>.* ChainService INFO ckb_chain::chain  block: {{ ckb_sync_target_number }}, .*)"
-            timeout: 900   # in seconds
+            timeout: 72000 # 20 hours
       tags:
         - wait_ckb_synchronization
 
