--- a/ckb-growth-v2/Cargo.toml
+++ b/ckb-growth-v2/Cargo.toml
@@ -37,6 +37,7 @@ clap = { version = "3.1.6", features = ["derive"] }
 lazy_static = "1.3.0"
 reqwest = { version = "0.11.4", features = ["blocking", "json"] }
 rand = "0.7"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 toml = "0.5.0"
 nix = "0.20.0"
